# LombardEar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plan.md
config/: default.json
paper/: README.md  main.tex  references.bib
scripts/: build_mac.sh  setup_audio_mac.sh
src/: main.c
src/audio/: audio_io.c  audio_io.h  jitter_buffer.c  jitter_buffer.h
src/dsp/: aec.c  aec.h  agc.c  agc.h  biquad.c  biquad.h  doa.c  doa.h  fast_math.c  fast_math.h  fixed_point.h  gsc.c  gsc.h  math_fast.h  multiband.c  multiband.h  noise_gate.c  noise_gate.h  optimize_arm.h  phase_align.c  phase_align.h  ring_buffer.h  steer.c  steer.h  steer_fast.c  steer_fast.h
src/platform/: platform.h  platform_unix.c  platform_win32.c
src/server/: web_server.c  web_server.h
src/utils/: config.c  config.h
tests/: benchmark_dsp.c  test_aec_offline.c  test_gsc_offline.c  test_jitter_buffer.c  test_phase_align.c  test_spatial_spectral.c  verify_ws.py
web/: index.html
web/css/: style.css
web/js/: script.js
